feat: swagger auto gen and alert flow
